[package]
name = "ntex_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
ntex = { version = "1.0", features = ["tokio", "rustls"] }
num_cpus = "1.16.0"
